--- a/5º Año/Ética y Deontología  Profesional/Unidad 1/1. Introduccion Conceptos.md
+++ b/5º Año/Ética y Deontología  Profesional/Unidad 1/1. Introduccion Conceptos.md
@@ -31,8 +31,9 @@ Una vez que haya terminado su análisis, se debe determinar que normas o princip
 - **Principio Utilitarista** “Tome la acción que alcance los valores mejores o superiores”.
 - **Principio de la aversión al riesgo** “Tome la acción que menos daño produzca o que tenga el menor costo potencial”.
 - **Regla ética “Nada es gratis”** “Suponga que virtualmente todos los objetos tangibles e intangibles son propiedad de alguien más, a menos que haya una declaración específica que indica lo contrario”.
+
 >[!tldr] Aspectos Éticos y Sociales de los Sistemas de Información
->La tecnología puede ser utilizada para alcanzar logros sociales, pero también pueden ser utilizados para cometer delitos o crímenes que tergiversan los valores sociales. Los Sistemas de Información dan lugar a nuevos aspectos éticos porque crean oportunidades para un cambio social intenso y amenazan las estructuras existentes de poder, dinero, derechos y obligaciones.
+>La tecnología puede ser utilizada para alcanzar logros sociales, pero también pueden ser utilizados para cometer delitos o crímenes que tergiversan los valores sociales. Los sistemas de información dan lugar a nuevos aspectos éticos porque crean oportunidades para un cambio social intenso y amenazan las estructuras existentes de poder, dinero, derechos y obligaciones.
 >Internet y el comercio electrónico para las empresas digitales facilitan más que nunca la recopilación, integración y distribución de la información, pero a su vez generan nuevas preocupaciones:
 >
 >- Protección de la privacidad personal.
