--- a/5º Año/Ética y Deontología  Profesional/Unidad 2/4. Ingenieria Social y Privacidad.md
+++ b/5º Año/Ética y Deontología  Profesional/Unidad 2/4. Ingenieria Social y Privacidad.md
@@ -5,8 +5,7 @@ Aunque se dice que el único ordenador seguro es el que está desenchufado, los 
 - Realizar compras telefónicamente o por internet con medios de terceros.
 - Acceder gratuitamente a Internet.
 
-En la actualidad estos objetivos fueron movidos a un segundo plano, ya que por lo general se busca obtener el control de una cuenta de correo para difamar, enviar spam, etc. U obtener el control de un perfil social para pedir a cambio favores sexuales, económicos o de otra índole o inclusive conseguir el control total de un equipo para unirlo a una red zombi.
-
+En la actualidad estos objetivos fueron movidos a un segundo plano, ya que por lo general se busca obtener el control de una cuenta de correo para difamar, enviar spam, etc. u obtener el control de un perfil social para pedir a cambio favores sexuales, económicos o de otra índole o inclusive conseguir el control total de un equipo para unirlo a una red zombi.
 >[!tldr] Principios de la Ingeniería Social
 >- **Autoridad**: El atacante se hace pasar por una figura de autoridad para que la víctima confíe y obedezca sin cuestionar.
 >- **Escasez**: Se crea un sentido de urgencia o rareza para presionar a la víctima a actuar rápidamente sin pensar en las consecuencias.
