--- a/5º Año/Ética y Deontología  Profesional/Unidad 2/6. Proteccion de Datos.md
+++ b/5º Año/Ética y Deontología  Profesional/Unidad 2/6. Proteccion de Datos.md
@@ -37,7 +37,7 @@ El “*aviso de privacidad*” es la herramienta que se utiliza para lograr lo a
 - La cláusula para aceptar o rechazar las transferencias.
 
 >[!tldr] Responsabilidades ante la Recolección y Uso de Datos Personales
->El responsable del tratamiento de datos de carácter personal es el encargado adoptar las medidas técnicas y organizativas adecuadas a los riesgos que presenta el tratamiento para garantizar la seguridad y confidencialidad de los datos personales, de modo de evitar su adulteración, pérdida, consulta o tratamiento no autorizado, que permitan detectar desviaciones, intencionales o no, de información, ya sea que los riesgos provengan de la acción humana o del medio técnico utilizado.
+>El responsable del tratamiento de datos de carácter personal es el encargado de adoptar las medidas técnicas y organizativas adecuadas a los riesgos que presenta el tratamiento para garantizar la seguridad y confidencialidad de los datos personales, de modo de evitar su adulteración, pérdida, consulta o tratamiento no autorizado, que permitan detectar desviaciones, intencionales o no, de información, ya sea que los riesgos provengan de la acción humana o del medio técnico utilizado.
 ### Protección de Datos
 La protección de datos es el amparo debido a los ciudadanos contra posible utilización por terceros, en forma no autorizada de sus datos personales, susceptibles de tratamiento automatizado, para de esta forma, confeccionar una información que identificable con él, afecte a su entorno personal, social o profesional, en los límites de su intimidad. Existen dos formas de proteger la información:
 - **Personal o física**.
@@ -74,7 +74,7 @@ La ley 25.326 establece dos tipos de sanciones:
 - **Administrativas**.
 - **Penales**.
 ### Sanciones Administrativas
-Las sanciones administrativas que podrá aplicar la Dirección Nacional de Protección de Datos pueden ser desde un simple apercibimiento, hasta una suspensión, o bien la aplicación de multas que va desde los Pesos $ 1.000 a $100.000 pesos, la clausura o cancelación del archivo, registro, banco o base de datos.
+Las sanciones administrativas que podrá aplicar la Dirección Nacional de Protección de Datos pueden ser desde un simple apercibimiento, hasta una suspensión, o bien la aplicación de multas que va desde los $1.000 a $100.000 pesos, la clausura o cancelación del archivo, registro, banco o base de datos.
 ### Sanciones Penales
 Para quien inserte o hiciera insertar datos falsos en un archivo, registro, banco o base de datos personales, se establece una pena de prisión de 1 mes a 2 años. Para quien proporcione a un tercero, a sabiendas, información falsa contenida en un archivo, registro, banco o base de datos personales, se establece una pena de prisión de entre 6 meses a 3 años.
 Si de alguno de estos delitos se derivara un perjuicio a alguna persona, la escala podrá aumentarse, y si el autor o responsable del ilícito es un funcionario público en ejercicio de sus funciones, podrá aplicársele la accesoria de inhabilitación para el desempeño de cargos públicos por el doble de tiempo de la condena.
@@ -120,7 +120,7 @@ Si un sitio web utiliza cookies, su titular debe explicar claramente qué son la
 El SPAM integra el grupo de los llamados "Abusos en el Correo Electrónico" y consiste en la técnica de enviar indiscriminadamente mensajes de correo electrónico a usuarios que no pidieron recibirlos. Su práctica trasciende los objetivos habituales del servicio y perjudica a proveedores y usuarios.
 Si bien generalmente se lo utiliza con fines comerciales o publicitarios, no son pocos los casos en que se lo utiliza con el fin de paralizar el servicio por saturación de las líneas, del espacio en disco o de la capacidad de procesamiento de un servidor.
 ### Legislación sobre SPAM
-La Ley 25.326 de Protección de los Datos Personales, sostiene escasos proyectos de Ley existentes sobre la materia, que en líneas generales consideran que las comunicaciones comerciales no solicitadas deben ser claramente identificadas como tales e incluir una opción automática de exclusión voluntaria de la lista de destinatarios.
+La ley 25.326 de Protección de los Datos Personales, sostiene escasos proyectos de ley existentes sobre la materia, que en líneas generales consideran que las comunicaciones comerciales no solicitadas deben ser claramente identificadas como tales e incluir una opción automática de exclusión voluntaria de la lista de destinatarios.
 Aún no existe legislación nacional ni internacional que condene el SPAM. Ni siquiera el famoso y nunca sancionado Decreto S.1618, que los spammers suelen mencionar al pie de sus mensajes de correo electrónico, que no fue más que un proyecto de enmienda para el Acta de Telecomunicaciones estadounidense presentado en el año 1998, pero que nunca fue sancionada.
 ### Medidas contra el SPAM
 Los programas utilizados para filtrar automáticamente dichos mensajes disminuyen los problemas, pero no son totalmente eficientes. Los proveedores de servicios de Internet deben adoptar políticas de "tolerancia cero" respecto a los mensajes spam que envíen sus clientes y exigir el cumplimiento de las condiciones de contratación del servicio. Debe alentarse la aprobación de códigos de conducta que obliguen a las partes involucradas en el negocio a comportarse éticamente.
