--- a/5º Año/Ética y Deontología  Profesional/Unidad 3/1. Contratos Informaticos y Derechos de los Consumidores.md
+++ b/5º Año/Ética y Deontología  Profesional/Unidad 3/1. Contratos Informaticos y Derechos de los Consumidores.md
@@ -19,7 +19,7 @@ Adicionalmente, surgen una serie de inconvenientes o puntos de inflexión que pu
 	- Problemas de comunicación entre las partes.
 	- Exceso de confianza o de desconfianza.
 	- Desequilibrio en el nivel de conocimientos técnicos, entre otras causas.
-- **Adecuada Documentación**: A las palabras se las lleva el viento. Documentar:
+- **Adecuada Documentación**: A las palabras se las lleva el viento, es por eso que se debe y recomienda documentar:
 	- Definición de necesidades del usuario.
 	- Consejos o sugerencias del proveedor.
 	- Conversaciones, acuerdos parciales, cambios de proyecto, etc.
