--- a/5º Año/Ética y Deontología  Profesional/Unidad 4/1. Buenas Practicas de Salud y Seguridad en el Trabajo.md
+++ b/5º Año/Ética y Deontología  Profesional/Unidad 4/1. Buenas Practicas de Salud y Seguridad en el Trabajo.md
@@ -1,32 +1,12 @@
-**Objetivo**: Explicar las medidas destinadas a evitar las enfermedades profesionales y accidentes de trabajo, de acuerdo a las características y riesgos de las tareas a realizar.
-
-## Definiciones
-
-### Teletrabajo
-
-Organizar y realizar el trabajo a distancia con el uso de las tecnologías de la información y comunicación en el domicilio del trabajador o en un lugar o establecimiento ajeno al empleador.
-
-### Accidente Laboral
-
-Acontecimiento inesperado ocurrido en el trabajo o en el trayecto entre el domicilio del trabajador y el lugar de trabajo o viceversa (in itinere).
-
-### Enfermedad Profesional
-
-Es producida por causa del lugar o del tipo de trabajo. Existe un listado de enfermedades profesionales establecido por el Decreto Nº 658/96 y su norma modificatoria Decreto Nº 1167/03, en el cual se identifica el agente de riesgo, cuadros clínicos, exposición y actividades en las que suelen producirse estas enfermedades.
-
-Si la enfermedad no se encuentra en el listado y se sospecha que es producida por el trabajo, hay que realizar la denuncia ante la ART, el empleador auto asegurado o el empleador no asegurado, y será la Comisión Médica la que definirá si se reconoce la enfermedad profesional en ese caso.
-
+Esta unidad tiene como objetivo explicar las medidas destinadas a evitar las enfermedades profesionales y accidentes de trabajo, de acuerdo a las características y riesgos de las tareas a realizar.
+>[!tldr] Definiciones Importantes
+>- **Teletrabajo**: Organizar y realizar el trabajo a distancia con el uso de las tecnologías de la información y comunicación en el domicilio del trabajador o en un lugar o establecimiento ajeno al empleador.
+>- **Accidente Laboral**: Acontecimiento inesperado ocurrido en el trabajo o en el trayecto entre el domicilio del trabajador y el lugar de trabajo o viceversa (in itinere).
+>- **Enfermedad Profesional**: Es producida por causa del lugar o del tipo de trabajo. Existe un listado de enfermedades profesionales establecido por el Decreto Nº 658/96 y su norma modificatoria Decreto Nº 1167/03, en el cual se identifica el agente de riesgo, cuadros clínicos, exposición y actividades en las que suelen producirse estas enfermedades. Si la enfermedad no se encuentra en el listado y se sospecha que es producida por el trabajo, hay que realizar la denuncia ante la ART, el empleador auto asegurado o el empleador no asegurado, y será la Comisión Médica la que definirá si se reconoce la enfermedad profesional en ese caso.
 ## Acciones Preventivas
-
 Es importante contar con métodos para evaluar las condiciones en que se desarrolla la tarea diaria. Para lograr ese objetivo, se dispone de dos herramientas en el teletrabajo:
-- La autocomprobación del lugar que fue elegido para desarrollar el trabajo (domicilio del trabajador o lugar ajeno al empleador).
+- La autocomprobación del lugar que fue elegido para desarrollar el trabajo, es decir, domicilio del trabajador o lugar ajeno al empleador.
 - Las medidas preventivas para verificar que sean las adecuadas.
-
-En caso de ser necesario, como opción está el Servicio de Higiene y Seguridad en el Trabajo que evalúa el puesto de trabajo del teletrabajador y propone las medidas preventivas que ha de adoptar.
-
-En tal caso, se debe coordinar la visita del preventor, designado por el empleador, que será en día y horario laboral para tal función.
-
-### Autocomprobación del Puesto de Trabajo
 
 La lista de autocomprobación cubre cinco aspectos preventivos para los trabajos de carácter administrativo:
 - Trabajo con pantallas de visualización de datos.
@@ -35,23 +15,12 @@ La lista de autocomprobación cubre cinco aspectos preventivos para los trabajos
 - Actuación ante un incendio.
 - Primeros auxilios.
 
-Debe comprobar uno a uno los ítems que componen cada aspecto preventivo. Cuando acepta cada ítem es que adoptó la medida preventiva propuesta.
-
-**Por ejemplo**:
-- Ubicar la mesa y la pantalla de modo que se eviten deslumbramientos o reflejos sobre la pantalla. Nunca ubicar la pantalla enfrente de una ventana que no disponga de cortinas o persianas para evitar el deslumbramiento.
-- No se deben utilizar mesas, sillas, cajas, papeleras, etc. como escaleras de mano para acceder a elementos en altura.
-
-Una vez cumplimentada toda la lista, la debe firmar y guardar para su posterior envío a quien se indique oportunamente. [Lista de Autocomprobación](https://www.usal.es/files/anexo_iv_lista_autocomprobacion.pdf)
-
-## Trabajo con Pantallas de Visualización de Datos
-
-La utilización habitual y prolongada de equipos con pantallas de visualización de datos (PVD) puede ocasionar trastornos visuales y oculares, fatiga mental, molestias o dolor en la espalda, cuello y manos. La mayoría de las veces esos trastornos tienen como causa la forma en la que se utilizan esos equipos, más que los equipos en sí mismos. En general, los problemas pueden evitarse con un buen diseño del puesto de trabajo con PVD y con unas buenas prácticas de trabajo.
-
-### Buenas Prácticas
-
+Debe comprobar uno a uno los ítems que componen cada aspecto preventivo. Cuando acepta cada ítem es que adoptó la medida preventiva propuesta. Una vez cumplimentada toda la lista, la debe firmar y guardar para su posterior envío a quien se indique oportunamente. [Lista de Autocomprobación](https://www.usal.es/files/anexo_iv_lista_autocomprobacion.pdf)
+En caso de ser necesario, como opción está el Servicio de Higiene y Seguridad en el Trabajo que evalúa el puesto de trabajo del teletrabajador y propone las medidas preventivas que ha de adoptar. En tal caso, se debe coordinar la visita del preventor, designado por el empleador, que será en día y horario laboral para tal función.
+### Trabajo con Pantallas de Visualización de Datos
+La utilización habitual y prolongada de equipos con pantallas de visualización de datos (PVD) puede ocasionar trastornos visuales y oculares, fatiga mental, molestias o dolor en la espalda, cuello y manos. La mayoría de las veces esos trastornos tienen como causa la forma en la que se utilizan esos equipos, más que los equipos en sí mismos. En general, los problemas pueden evitarse con un buen diseño del puesto de trabajo con PVD y con unas buenas prácticas de trabajo. Dichas buenas prácticas son las siguientes:
 - Ajustar la silla y la pantalla de modo que se obtenga una postura confortable. Los brazos, muñecas y manos deben estar en posición horizontal y la altura de los ojos debe ser aproximadamente igual a la parte superior de la pantalla. La distancia entre los ojos y la pantalla debe estar entre 40 y 70 cm.
 - Asegurar que existe suficiente espacio de trabajo para contener los documentos y todo el equipo necesario de trabajo.
-- Probar diferentes posiciones de la pantalla, teclado, mouse y documentos, hasta lograr la distribución más adecuada para cada uno.
 - Si se utiliza un porta documentos, colocarlo a una altura y distancia similar a la de la pantalla con el fin de reducir los esfuerzos de acomodación visual.
 - Asegurar que la iluminación mínima del sector de trabajo oscilará entre 500 y 1000 lux, como en una oficina común.
 - Ubicar la mesa y la pantalla de modo que se eviten deslumbramientos o reflejos sobre la pantalla. Nunca ubicar la pantalla enfrente de una ventana que no disponga de cortinas o persianas para evitar el deslumbramiento.
@@ -71,74 +40,58 @@ La utilización habitual y prolongada de equipos con pantallas de visualización
 - El área de trabajo debe estar ventilada permitiendo el ingreso de aire al ambiente desde el exterior, mediante ventanas, rejillas, u otras formas de ventilación. 
 
 Cuando esto no es posible, se deberían hacer pausas. Son más recomendables pausas cortas y frecuentes que largas y escasas. Por ejemplo, es preferible realizar pausas de 10 minutos cada hora de trabajo continuo con la pantalla que realizar pausas de 20 minutos cada dos horas. Durante las pausas se debería relajar la vista (por ejemplo mirando algunas escenas lejanas) y realizar ejercicios de relajación muscular.
-
-## Medidas de Seguridad en Trabajos Administrativos
-
+### Medidas de Seguridad en Trabajos Administrativos
 Los resbalones y tropezones son causas de caídas durante los trabajos de carácter administrativo, a veces incluso durante el movimiento o transporte de cargas. También se producen cortes y pinchazos en la manipulación del pequeño material de oficina: tijeras, abrecartas, trinchetas, etc., así como golpes contra objetos inmóviles (archivos, cajones, etc.). La mayoría de esos riesgos se pueden evitar adoptando sencillas medidas preventivas.
-
-### Medidas de Seguridad con el Material de Oficina
-
-- Guardar los objetos cortantes (tijeras, abrecartas, cutter, etc.) en los cajones después de su uso, ubicándolos en sus fundas.
-- Colocar las tijeras, abrecartas, etc., separadas de los bordes de las mesas para evitar su caída.
-- Ordenar y recoger las mesas de trabajo y muebles accesorios al finalizar la jornada de trabajo.
-- No arrojar materiales u objetos cortantes a la papelera.
-
-### Resbalones y Tropezones
-
-- Prestar atención al estado del suelo, reparando cualquier irregularidad que pueda ser causa de una caída, por ejemplo, ladrillos sueltos, alfombras y moquetas sueltas o desgastadas.
-- No circular por zonas con el piso mojado o resbaladizo debido a procesos de limpieza.
-- No circular por zonas con bajos niveles de iluminación ni cuando existan objetos y obstáculos en las zonas de tránsito que impidan una circulación normal.
-- No circular por zonas en las que existan cables sueltos por el suelo.
-- Mantener las zonas de paso libres de obstáculos tales como cajas, papeleras, etc.
-
-### Escaleras
-
-- Utilizar el pasamanos al circular por una escalera.
-- Evitar leer documentos mientras se circula por una escalera.
-- No se deben utilizar mesas, sillas, cajas, papeleras, etc. como escaleras de mano para acceder a elementos en altura.
-- Comprobar las escaleras de mano antes de utilizarlas, para asegurar que están en buen estado (peldaños, tirante de seguridad, etc.).
-- No tratar de alcanzar objetos alejados del eje de la escalera de mano.
-- Es mejor bajar de la escalera, desplazarla y volver a subir.
-- Durante el tiempo que se está subido a la escalera, es importante tener una mano libre para poder sujetarse.
-- No subir a la escalera manejando grandes pesos.
-- No trabajar en los últimos peldaños de la escalera de mano.
-
-### Estanterías, Armarios, Archivos
-
-- Con el fin de evitar golpes al invadir zonas de paso, cerrar cada cajón después de utilizarlo y siempre antes de abrir el siguiente.
-- Colocar los elementos más pesados en los cajones inferiores o en la parte más baja de las estanterías.
-- Los cajones deben llenarse de atrás hacia delante y de abajo hacia arriba.
-- Cerciorarse de la estabilidad de estanterías, armarios y archivadores para evitar su caída.
-- No intentar sujetar un armario o estantería que se cae.
-
-### Electricidad
-
-- No manipular en las instalaciones eléctricas ni intentar reparar equipos de trabajo que utilizan la electricidad (por ejemplo, computadoras). Esas funciones sólo debe hacerlas el personal especializado.
-- La instalación eléctrica debe contar con un interruptor termomagnético, disyuntor diferencial y puesta a tierra (Res. 2007/95 ENRE).
-- No desconectar los equipos tirando del cable.
-- No utilizar alargues que no garanticen la continuidad del conductor de tierra.
-- No sobrecargar los enchufes utilizando alargues para alimentar varios equipos.
-- Evitar la presencia de cables por el suelo en las zonas de paso.
-- Desconectar los equipos cuando no se utilicen y siempre antes de finalizar la jornada de trabajo.
-- Evitar limpiar con líquidos cualquier equipo conectado a la corriente eléctrica.
-- Evitar salpicaduras (café, té, etc.) sobre los equipos conectados a la corriente eléctrica.
-- No conectar los equipos eléctricos con las manos húmedas o mojadas.
-### Posturas Forzadas y Movimientos No Adecuados
-
-- No sentarse sobre una pierna o con las piernas cruzadas.
-- No sujetar el auricular del teléfono con el hombro y la cabeza.
-- Los giros sobre la silla no deben hacerse por movimientos bruscos del tronco, sino ayudándose con los pies.
-- No forzar la postura para alcanzar objetos distantes, levantarse para tomarlos.
-
-## Prevención de Incendios
-
+-  **Medidas de Seguridad con el Material de Oficina**.
+	- Guardar los objetos cortantes (tijeras, abrecartas, cutter, etc.) en los cajones después de su uso, ubicándolos en sus fundas.
+	- Colocar las tijeras, abrecartas, etc., separadas de los bordes de las mesas para evitar su caída.
+	- Ordenar y recoger las mesas de trabajo y muebles accesorios al finalizar la jornada de trabajo.
+	- No arrojar materiales u objetos cortantes a la papelera.
+- **Resbalones y Tropezones**.
+	- Prestar atención al estado del suelo, reparando cualquier irregularidad que pueda ser causa de una caída, por ejemplo, ladrillos sueltos, alfombras y moquetas sueltas o desgastadas.
+	- No circular por zonas con el piso mojado o resbaladizo debido a procesos de limpieza.
+	- No circular por zonas con bajos niveles de iluminación ni cuando existan objetos y obstáculos en las zonas de tránsito que impidan una circulación normal.
+	- No circular por zonas en las que existan cables sueltos por el suelo.
+	- Mantener las zonas de paso libres de obstáculos tales como cajas, papeleras, etc.
+- **Escaleras**.
+	- Utilizar el pasamanos al circular por una escalera.
+	- Evitar leer documentos mientras se circula por una escalera.
+	- No se deben utilizar mesas, sillas, cajas, papeleras, etc. como escaleras de mano para acceder a elementos en altura.
+	- Comprobar las escaleras de mano antes de utilizarlas, para asegurar que están en buen estado (peldaños, tirante de seguridad, etc.).
+	- No tratar de alcanzar objetos alejados del eje de la escalera de mano.
+	- Es mejor bajar de la escalera, desplazarla y volver a subir.
+	- Durante el tiempo que se está subido a la escalera, es importante tener una mano libre para poder sujetarse.
+	- No subir a la escalera manejando grandes pesos.
+	- No trabajar en los últimos peldaños de la escalera de mano.
+- **Estanterías, Armarios, Archivos**.
+	- Con el fin de evitar golpes al invadir zonas de paso, cerrar cada cajón después de utilizarlo y siempre antes de abrir el siguiente.
+	- Colocar los elementos más pesados en los cajones inferiores o en la parte más baja de las estanterías.
+	- Los cajones deben llenarse de atrás hacia delante y de abajo hacia arriba.
+	- Cerciorarse de la estabilidad de estanterías, armarios y archivadores para evitar su caída.
+	- No intentar sujetar un armario o estantería que se cae.
+- **Electricidad**.
+	- No manipular en las instalaciones eléctricas ni intentar reparar equipos de trabajo que utilizan la electricidad (por ejemplo, computadoras). Esas funciones solo debe hacerlas el personal especializado.
+	- La instalación eléctrica debe contar con un interruptor termomagnético, disyuntor diferencial y puesta a tierra (Res. 2007/95 ENRE).
+	- No desconectar los equipos tirando del cable.
+	- No utilizar alargues que no garanticen la continuidad del conductor de tierra.
+	- No sobrecargar los enchufes utilizando alargues para alimentar varios equipos.
+	- Evitar la presencia de cables por el suelo en las zonas de paso.
+	- Desconectar los equipos cuando no se utilicen y siempre antes de finalizar la jornada de trabajo.
+	- Evitar limpiar con líquidos cualquier equipo conectado a la corriente eléctrica.
+	- Evitar salpicaduras (café, té, etc.) sobre los equipos conectados a la corriente eléctrica.
+	- No conectar los equipos eléctricos con las manos húmedas o mojadas.
+- **Posturas Forzadas y Movimientos No Adecuados**.
+	- No sentarse sobre una pierna o con las piernas cruzadas.
+	- No sujetar el auricular del teléfono con el hombro y la cabeza.
+	- Los giros sobre la silla no deben hacerse por movimientos bruscos del tronco, sino ayudándose con los pies.
+	- No forzar la postura para alcanzar objetos distantes, levantarse para tomarlos.
+### Prevención de Incendios
 El aspecto más importante en la seguridad contra incendios es la prevención. La mayoría de los incendios producidos se podrían haber evitado con una serie de medidas preventivas:
 - En el diseño de los edificios y sus instalaciones.
 - Con un mantenimiento preventivo correcto.
 - Con unas prácticas de trabajo adecuadas.
 
-### Medidas de Prevención de Incendios
-
+#### Medidas de Prevención de Incendios
 - Tener un matafuegos portátil de 1 kg. ABC. Colocarlo en un sitio cercano a su lugar de trabajo.
 - Impedir la presencia simultánea de materiales combustibles y focos de ignición.
 - Mantener el orden y la limpieza en los puestos de trabajo. Se debe evitar acumular materiales combustibles innecesarios y en especial alrededor de los aparatos eléctricos.
@@ -149,74 +102,53 @@ El aspecto más importante en la seguridad contra incendios es la prevención. L
 - No colocar vasos con líquidos sobre aparatos eléctricos como computadoras, impresoras, escáneres, etc.
 - Al final de la jornada de trabajo, desconectar los aparatos eléctricos que no vayan a utilizarse.
 - Avisar a los servicios técnicos correspondientes, lo más urgentemente posible, si se aprecian anomalías en los aparatos e instalaciones eléctricas (olores sospechosos, superficies calientes, etc.).
-
-### Actuación ante un Incendio
-
+#### Actuación ante un Incendio
 - Al detectar un incendio hay que mantener la calma, no gritar y actuar con rapidez comunicando la emergencia al servicio de bomberos discando 100 en todo el país o avisar al 911.
 - Si se encuentra capacitado, con los medios de extinción adecuados y sin exponer en ningún momento su integridad física, intente extinguir el fuego. Si no, abandone la vivienda, desconectando si es posible los aparatos eléctricos y, cuando la magnitud del fuego lo permita, cerrando las puertas y ventanas sin bloquear las cerraduras.
 - Si trata de utilizar un extintor, sitúese entre las llamas y la salida de la vivienda. No se deben utilizar extintores de agua o espuma para apagar un fuego en equipos conectados a la red eléctrica.
 - Si se encuentra en presencia de humos, tápese la nariz y la boca con ropa húmeda. No corra, camine agachado o reptando. Si se le prende la ropa no corra, tírese al suelo y ruede.
 - Si se encuentra atrapado por el fuego en un recinto cierre todas las puertas, tape con trapos y alfombras, si es posible húmedos, las rendijas por donde penetre el humo, busque una ventana exterior, y señale su situación. Si puede utilizar un teléfono llame a los bomberos y dígales dónde se encuentra.
-
 ## Primeros Auxilios
-
 Una actuación rápida en un accidente puede salvar la vida de una persona o evitar que las lesiones producidas puedan empeorar. Es importante tener unos conocimientos básicos generales que permitan entender la organización de los primeros auxilios y si es necesario, poder actuar como apoyo al trabajo de dichos equipos.
-
 La secuencia de actuación en caso de accidente es Proteger, Avisar y Socorrer, secuencia conocida coloquialmente como PAS.
-
-### Secuencia PAS
-
 - **Proteger**: Antes de actuar hemos de asegurarnos que tanto el accidentado como nosotros mismos estamos fuera de todo peligro. Por ejemplo, un electrocutado no debe tocarse sin asegurarse previamente que no sigue conectado a la red eléctrica y si lo está, habrá que tomar antes las medidas oportunas, desconectando la energía eléctrica, o si ello no es posible, mediante equipos aislantes de la electricidad.
 - **Avisar**: Hay que activar el sistema de emergencia avisando de la existencia del accidente a los servicios sanitarios (ambulancia, servicios médicos, etc.).
 - **Socorrer**: Una vez que se ha protegido y avisado, hay que socorrer al accidentado. Para ello hay que reconocer sus signos vitales en este orden:
-  1. Conciencia
-  2. Respiración
-  3. Pulso
+	1. Conciencia.
+	2. Respiración.
+	3. Pulso.
 
 Es importante recordar que al accidentado hay que tratarlo con urgencia, no trasladarlo con urgencia.
-
 ## Ejercicios Físicos y de Relajación
-
-### Ejercicios de Manos
-
-- Apriete y suelte las manos haciendo puños.
-- Agite y estire los dedos.
-- Repita los ejercicios por lo menos tres veces.
-
-### Ejercicios de Espalda y Hombros
-
-- Póngase de pie, coloque su mano derecha sobre el hombro izquierdo y recline su cabeza hacia atrás.
-- Realice el mismo ejercicio con el hombro derecho.
-
-### Ejercicios de Cabeza y Cuello
-
-- Mueva la cabeza hacia ambos lados con cadencia lenta.
-- Evite movimientos bruscos.
-- Luego, muévala hacia adelante y hacia atrás.
-
-### Ejercicios Sentado
-
-- Con la espalda recta estire ambos brazos con las manos unidas.
-- Estire un brazo por vez extendido hacia arriba al costado de su cabeza. Repita varias veces el ejercicio.
-- Estire su espalda separándola de la silla y sosteniendo la cintura con sus manos a ambos lados.
-- Rote su tronco lentamente hacia uno y otro lado, acompañándolo con el movimiento de la cabeza.
-- Coloque el brazo opuesto sobre su rodilla y las piernas cruzadas.
-
-### Ejercicios Parado
-
-- Extienda ambos brazos al costado de cabeza sosteniendo sus manos unidas.
-- Con los brazos entrelazados detrás de su cabeza, rote su tronco hacia un lado.
-- Repita la acción para el lado opuesto.
-- Con los brazos extendidos al costado de su cuerpo, levante y baje los hombros.
-- Con la espalda erguida, una sus manos en posición de rezo (manos hacia arriba). Luego repita el ejercicio con las manos hacia abajo.
-- Sacuda sus manos manteniendo los brazos estirados al costado de su cuerpo.
-
-### Ejercicios de Relajación
-
-- Con la ayuda de su pulgar e índice, presione arriba las cejas.
-- Coloque sus índices encima de sus mejillas realizando masajes circulares.
-- Presione con sus pulgares los párpados durante 3 ó 4 segundos.
-- De un masaje de abajo hacia arriba de su nariz, entre sus dedos pulgar e índice.
-- Estire su pierna derecha y haga pequeños círculos con el tobillo. Repita lo mismo con la izquierda.
-- Haga con su pulgar pequeños masajes circulares en la palma de su mano.
+- **Ejercicios de Manos**.
+	- Apriete y suelte las manos haciendo puños.
+	- Agite y estire los dedos.
+	- Repita los ejercicios por lo menos tres veces.
+- **Ejercicios de Espalda y Hombros**.
+	- Póngase de pie, coloque su mano derecha sobre el hombro izquierdo y recline su cabeza hacia atrás.
+	- Realice el mismo ejercicio con el hombro derecho.
+- **Ejercicios de Cabeza y Cuello**.
+	- Mueva la cabeza hacia ambos lados con cadencia lenta.
+	- Evite movimientos bruscos.
+	- Luego, muévala hacia adelante y hacia atrás.
+- **Ejercicios Sentado**.
+	- Con la espalda recta, estire ambos brazos con las manos unidas.
+	- Estire un brazo por vez extendido hacia arriba al costado de su cabeza. Repita varias veces el ejercicio.
+	- Estire su espalda separándola de la silla y sosteniendo la cintura con sus manos a ambos lados.
+	- Rote su tronco lentamente hacia uno y otro lado, acompañándolo con el movimiento de la cabeza.
+	- Coloque el brazo opuesto sobre su rodilla y las piernas cruzadas.
+- **Ejercicios Parado**.
+	- Extienda ambos brazos al costado de cabeza sosteniendo sus manos unidas.
+	- Con los brazos entrelazados detrás de su cabeza, rote su tronco hacia un lado.
+	- Repita la acción para el lado opuesto.
+	- Con los brazos extendidos al costado de su cuerpo, levante y baje los hombros.
+	- Con la espalda erguida, una sus manos en posición de rezo (manos hacia arriba). Luego repita el ejercicio con las manos hacia abajo.
+	- Sacuda sus manos manteniendo los brazos estirados al costado de su cuerpo.
+- **Ejercicios de Relajación**.
+	- Con la ayuda de su pulgar e índice, presione arriba las cejas.
+	- Coloque sus índices encima de sus mejillas realizando masajes circulares.
+	- Presione con sus pulgares los párpados durante 3 ó 4 segundos.
+	- De un masaje de abajo hacia arriba de su nariz, entre sus dedos pulgar e índice.
+	- Estire su pierna derecha y haga pequeños círculos con el tobillo. Repita lo mismo con la izquierda.
+	- Haga con su pulgar pequeños masajes circulares en la palma de su mano.
 
