--- a/5º Año/Ética y Deontología  Profesional/Unidad 2/2. Codigos de Etica para los Licenciados en Informatica.md
+++ b/5º Año/Ética y Deontología  Profesional/Unidad 2/2. Codigos de Etica para los Licenciados en Informatica.md
@@ -27,16 +27,16 @@ La ética informática es una ciencia que se encarga del comportamiento del ser 
 4. Informar a las personas interesadas y/o las autoridades correspondientes sobre cualquier peligro real o potencial para las personas, la sociedad o el medio ambiente, que consideren puedan devenir del software, los sistemas informáticos o los proyectos relacionados.
 5. Ser justo y veraz en todas las afirmaciones, especialmente en las que sean públicas, relativas a los proyectos, métodos y herramientas.
 6. Tomar una actitud activa, en la medida de lo posible, para que las desventajas económicas, las discapacidades físicas y otros factores no dificulten el acceso a los beneficios de la informática a ningún sector de la población.
-7. Tener en consideración en todo momento, que el acceso a las Tecnologías de la Información constituye una nueva barrera que agrava la división social y económica. Procurar, siempre que sea posible, avanzar en la disminución de dicha segregación.
+7. Tener en consideración en todo momento, que el acceso a las tecnologías de la información constituye una nueva barrera que agrava la división social y económica. Procurar, siempre que sea posible, avanzar en la disminución de dicha segregación.
 8. Tener una disposición generosa en la aportación de las capacidades profesionales para buenas causas y contribuir a la educación del público en general con respecto a la informática.
 9. Informar acerca de cualquier práctica entre cuyos fines esté la comisión de un delito, en especial si se trata de un delito informático.
 10. No permitir la utilización fraudulenta de su titulación por personas que, ilegítimamente, sin la acreditación y preparación necesarias, lleven a cabo actuaciones profesionales correspondientes a un/a Lic. en Informática.
 11. Realizar su actividad en términos de máxima imparcialidad, cuando se encuentre ante intereses personales o institucionales contrapuestos.
 
-En cuanto a la imagen de la profesión deberá:
+En cuanto a su imagen un profesión deberá:
 - Promover el conocimiento general de la profesión y su aportación al bien público.
-- Difundir el conocimiento de la Informática mediante la participación en organizaciones profesionales, congresos y publicaciones.
-- Apoyar, como miembros de una profesión, a otros/as Lic. en Informática que se esfuercen en actuar según este Código.
+- Difundir el conocimiento de la informática mediante la participación en organizaciones profesionales, congresos y publicaciones.
+- Apoyar, como miembros de una profesión, a otros/as licenciados en informática que se esfuercen en actuar según este Código.
 - No anteponer el interés propio al de la profesión, el cliente o el empresario.
 - Observar todas las leyes que rigen su profesión, a menos que, en circunstancias excepcionales, tal cumplimiento sea antepuesto al del interés general.
 - Definir con veracidad las características y funcionalidades de los sistemas informáticos y/o proyectos en los que trabajan, evitando exageraciones, falsas expectativas y especulaciones.
